--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <properties>
         <compiler-plugin.version>3.13.0</compiler-plugin.version>
-        <maven.compiler.release>17</maven.compiler.release> <!-- Cambié a JDK 17 -->
+        <maven.compiler.release>21</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
@@ -15,8 +15,6 @@
         <quarkus.platform.version>3.18.2</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.5.2</surefire-plugin.version>
-        <micronaut.version>4.0.0</micronaut.version>
-
     </properties>
 
     <repositories>
@@ -39,7 +37,7 @@
     </dependencyManagement>
 
     <dependencies>
-        <!-- Quarkus dependencies -->
+
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-jaxb</artifactId>
@@ -59,10 +57,6 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-hibernate-reactive-panache</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-hibernate-orm</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -89,96 +83,56 @@
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
-            <version>2.9.0</version> <!-- Usé una versión estable -->
+            <version>2.10.0</version> <!-- Usar la última versión disponible -->
         </dependency>
 
+        <!-- Dependencia de Gson para convertir objetos -->
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-gson</artifactId>
-            <version>2.9.0</version> <!-- Usé una versión compatible con Retrofit -->
+            <version>2.10.0</version> <!-- Asegúrate de que la versión de Gson sea compatible con Retrofit -->
         </dependency>
 
         <!-- Dependencia de OkHttp -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.9.0</version> <!-- Versión estable de OkHttp -->
+            <version>4.10.0</version> <!-- Versión reciente de OkHttp -->
         </dependency>
 
         <!-- Dependencia de OkHttp para los logs -->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>logging-interceptor</artifactId>
-            <version>4.9.0</version> <!-- Versión compatible -->
+            <version>4.10.0</version> <!-- Versión compatible -->
         </dependency>
-
-        <!-- Dependencia de Jackson para objetos -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.2</version>
+        </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version> <!-- O la versión que estés usando -->
         </dependency>
-
-        <!-- Dependencia OpenFoodFacts -->
         <dependency>
             <groupId>pl.coderion</groupId>
             <artifactId>openfoodfacts-java-wrapper</artifactId>
             <version>0.9.3</version>
         </dependency>
-
-        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.30</version>
             <scope>compile</scope>
         </dependency>
-
-        <!-- Google Cloud Translate -->
         <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-translate</artifactId>
-            <version>2.20.0</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>jakarta.transaction</groupId>
-            <artifactId>jakarta.transaction-api</artifactId>
-            <version>2.0.0</version> <!-- Usa la última versión disponible -->
-        </dependency>
-
-        <!-- Dependencia de Jakarta Persistence (JPA) -->
-        <dependency>
-            <groupId>jakarta.persistence</groupId>
-            <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.1.0</version> <!-- Usa la última versión disponible -->
-        </dependency>
-
-        <!-- Dependencia de Hibernate (para implementación de JPA) -->
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>5.6.10.Final</version> <!-- O la última versión disponible -->
-        </dependency>
-        <!-- Dependencia de Mockito -->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <version>5.5.0</version> <!-- Usa la última versión estable -->
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>5.5.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.15.0</version>
-        </dependency>
-
     </dependencies>
 
     <build>
