--- a/pom.xml
+++ b/pom.xml
@@ -83,39 +83,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Dependencias Retrofit -->
-        <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>retrofit</artifactId>
-            <version>2.9.0</version> <!-- Usé una versión estable -->
-        </dependency>
-
-        <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>converter-gson</artifactId>
-            <version>2.9.0</version> <!-- Usé una versión compatible con Retrofit -->
-        </dependency>
-
-        <!-- Dependencia de OkHttp -->
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>4.9.0</version> <!-- Versión estable de OkHttp -->
-        </dependency>
-
-        <!-- Dependencia de OkHttp para los logs -->
-        <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>logging-interceptor</artifactId>
-            <version>4.9.0</version> <!-- Versión compatible -->
-        </dependency>
-
-        <!-- Dependencia de Jackson para objetos -->
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version> <!-- O la versión que estés usando -->
-        </dependency>
 
         <!-- Dependencia OpenFoodFacts -->
         <dependency>
@@ -156,6 +123,18 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>5.6.10.Final</version> <!-- O la última versión disponible -->
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client-jackson</artifactId>
         </dependency>
 
     </dependencies>
