--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.sql-load-script=import.sql
+%quarkus.hibernate-orm.sql-load-script=import.sql
 %dev.quarkus.hibernate-orm.database.generation=drop-and-create
 %dev.quarkus.hibernate-orm.sql-load-script=import-dev.sql
 %dev.quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.sql-load-script=no-file
+quarkus.rest-client.OpenFoodFactsClient.url=https://world.openfoodfacts.org
