conexion de interfaces con quarkus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ quarkus.datasource.db-kind=postgresql
 smallrye.jwt.sign.key.location=jwt/private-key.pem
 mp.jwt.verify.publickey.location=jwt/public-key.pem
 mp.jwt.verify.issuer=https://example.com/issuer
+quarkus.datasource.devservices.enabled=false
+quarkus.hibernate-orm.active=false
