Feat(HU05.1): Fix API sin problemas de dependencias

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ mp.jwt.verify.publickey.location=jwt/public-key.pem
 mp.jwt.verify.issuer=https://example.com/issuer
 quarkus.datasource.devservices.enabled=false
 quarkus.hibernate-orm.active=false
+
+quarkus.rest-client."nutricelia.com.OpenFoodFactsClient".url=https://world.openfoodfacts.org/api/v2
