creación de cuenta e inicio sesion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@
 #%dev.quarkus.hibernate-orm.database.generation=drop-and-create
 #%dev.quarkus.hibernate-orm.sql-load-script=import-dev.sql
 #%dev.quarkus.hibernate-orm.log.sql=true
-smallrye.jwt.sign.key.location=jwt/private-key.pem
+smallrye.jwt.sign.key.location=jwt/rsa-private-key.pem
 mp.jwt.verify.publickey.location=jwt/public-key.pem
+smallrye.jwt.sign.key-format=PEM
+smallrye.jwt.sign.algorithm=RS256
 mp.jwt.verify.issuer=https://example.com/issuer
 
 quarkus.jackson.fail-on-unknown-properties=false
@@ -23,3 +25,6 @@ quarkus.datasource.reactive.max-size=20
 quarkus.hibernate-orm.database.generation=none
 #quarkus.hibernate-orm.datasource=nutricelia
 quarkus.hibernate-orm.packages=nutricelia.com.Model
+
+
+
