Respuesta de la bbdd de OFF conseguida, falta pasarla a nuestra BBDD en postres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ quarkus.datasource.reactive.max-size=20
 quarkus.hibernate-orm.database.generation=none
 #quarkus.hibernate-orm.datasource=nutricelia
 quarkus.hibernate-orm.packages=nutricelia.com.Model
+
+quarkus.rest-client.OpenFoodFactsClient.url=https://world.openfoodfacts.org/api/v2
+quarkus.rest-client."nutricelia.com.OpenFoodFactsClient".connect-timeout=60000
+
+quarkus.rest-client."nutricelia.com.OpenFoodFactsClient".read-timeout=60000
