--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-client-jackson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile.rest.client</groupId>
+            <artifactId>microprofile-rest-client-api</artifactId>
+            <version>4.0</version>
+            <scope>provided</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.duckdb</groupId>
