Acceso API recetas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,15 @@ quarkus.rest-client.OpenFoodFactsClient.url=https://world.openfoodfacts.org/api/
 quarkus.rest-client."nutricelia.com.OpenFoodFactsClient".connect-timeout=60000
 
 quarkus.rest-client."nutricelia.com.OpenFoodFactsClient".read-timeout=60000
+
+
+# Edamam API Configuration
+# Utilizar variables de entorno (EDAMAM_APP_ID, EDAMAM_API_KEY) en producción
+edamam.app.id=${EDAMAM_APP_ID:0503d2e6}
+edamam.api.key=${EDAMAM_API_KEY:9e13739c1d1f906638cfda450be0648c}
+
+# REST Client Configuration for Edamam (linked by configKey="edamam-api")
+quarkus.rest-client.edamam-api.url=https://api.edamam.com
+# Opcional: Ajustar timeouts si es necesario (en milisegundos)
+quarkus.rest-client.edamam-api.connect-timeout=5000
+quarkus.rest-client.edamam-api.read-timeout=15000
